# catkin_test

./: CMakeLists.txt
a/: CMakeLists.txt
b/: CMakeLists.txt
buildtest/: .gitignore  setup.cfg  test_basics.py
buildtest/catkintest/: __init__.py
debian/: control  control~
nose/: .gitignore  test.rosinstall  test_basics.py
nose/catkintest/: __init__.py
python_test_a/: CMakeLists.txt
quux_user/: CMakeLists.txt
